# curvecluster

./: README.md  pyproject.toml
doc/source/: conf.py  index.rst  plot_pre_code
src/: conftest.py
src/curvecluster/: __init__.py  _frechet.py  average.py  initialize.py  simplify.py
tests/: conftest.py  test_simplify.py
